<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_demo</name>
  <version>1.0.0</version>
  <description>Demonstration nodes for intdash ROS Bridge</description>
  <maintainer email="sdk-support@aptpod.co.jp">aptpod,Inc</maintainer>
  <license>Apache License Version 2.0, January 2004</license>
  <depend>sensor_msgs</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
